@@ -11,6 +11,7 @@ import org.springframework.stereotype.Service;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -36,7 +37,7 @@ public class CarBrandService {
                                 brand -> levenshteinDistance.apply(brandName.toLowerCase(), brand.getName().toLowerCase())
                         )
                 )
-                .limit(6).toList();
+                .limit(6).collect(Collectors.toList());
     }
 
     public List<CarBrandDto> getSimilarCarBrandsUsePG(String brandName) {
